<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="100dp"
    android:orientation="vertical"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/text_info_productName"
                android:layout_width="114dp"
                android:layout_height="37dp"
                android:text="@string/the_name_of_the_product"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/text_info_productPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="400$"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/text_info_productDescription"
                android:layout_width="114dp"
                android:layout_height="36dp"
                android:text="@string/desc_test"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <Button
                android:id="@+id/button_info_close"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/close"
                android:textSize="4sp" />

            <Button
                android:id="@+id/button_info_addCart"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/add_to_cart"
                android:textSize="4sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>