<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:id="@+id/const_main">

    <Button
        android:id="@+id/button_main_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load"
        app:layout_constraintBottom_toBottomOf="@+id/fragment__main_ar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852" />

    <Button
        android:id="@+id/button_main_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="@+id/fragment__main_ar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment__main_ar"
        app:layout_constraintVertical_bias="0.957" />

    <Button
        android:id="@+id/button_main_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        app:layout_constraintBottom_toBottomOf="@+id/fragment__main_ar"
        app:layout_constraintEnd_toEndOf="@+id/fragment__main_ar"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957" />

    <fragment
        android:id="@+id/fragment__main_ar"
        android:name="com.example.catalogshopping.view.CustomArFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/linear_main_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="9" />

    <LinearLayout
        android:id="@+id/linear_main_parent"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment__main_ar"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_main_cart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>